--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start": "vite preview --host 0.0.0.0 --port 4173"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.39.0",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.344.0",
